--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["browserslist", "TTFB", "viod"]
+  "cSpell.words": [
+    "browserslist",
+    "classname",
+    "TTFB",
+    "viod"
+  ]
 }
